z-index prevents mouse interaction fixed

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -170,8 +170,7 @@ a {
 }
 
 .right-bar {
-    z-index: -10;
-    flex: 10;
+    flex: 8;
 }
 
 .map-box {
